# vendor-connectors

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  CICD_IMPLEMENTATION.md  CLAUDE.md  CONTRIBUTING.md  MIGRATION_STATUS.md  PR_COMPLETION_SUMMARY.md  README.md  REVIEW.md  SECURITY.md  index.html  pyproject.toml  test_output.txt  tox.ini
.claude/commands/: ecosystem-sync.md  fix-ci.md  label-issue.md  review-pr.md
.crewai/: manifest.yaml
.crewai/crews/connector_builder/: agents.yaml  tasks.yaml
.crewai/flows/: __init__.py
.cursor/rules/: 00-development.mdc
.cursor/rules/agents/: README.md  ai-refactor.mdc  connector-builder.mdc  e2e-testing.mdc
.github/: copilot-instructions.md  copilot-space.yml
.github/agents/: README.md  ai-refactor-agent.yml  connector-builder-agent.yml  test-coverage-agent.yml
.github/scripts/: set_version.py
.github/workflows/: ci.yml  claude-issue-triage.yml  claude-pr-review.yml  claude-upstream-notify.yml  claude.yml  publish.yml  release.yml  sync-mesh-animations.yml
.ruler/: coding-guidelines.md  project-context.md  ruler.toml  testing-guidelines.md
docs/: AI_INTEGRATION_GUIDE.md  ALIGNMENT_SUMMARY.md  meshy-ai-integration.md
docs/development/: ai-dependencies-draft.toml  ai-subpackage-design.md
docs/memory-bank/: activeContext.md
memory-bank/: activeContext.md
scripts/: sync_animations.py
src/cloud_connectors/: __init__.py
src/cloud_connectors/aws/: __init__.py
src/cloud_connectors/base/: __init__.py  errors.py  logging.py  settings.py  utils.py
src/cloud_connectors/github/: __init__.py
src/cloud_connectors/google/: __init__.py
src/cloud_connectors/slack/: __init__.py
src/cloud_connectors/vault/: __init__.py
src/cloud_connectors/zoom/: __init__.py
src/vendor_connectors/: __init__.py  _compat.py  base.py  cloud_params.py  connectors.py
src/vendor_connectors/ai/: __init__.py  base.py  connector.py
src/vendor_connectors/ai/providers/: __init__.py  anthropic.py  base.py  google.py  ollama.py  openai.py  xai.py
src/vendor_connectors/ai/providers/crewai/: __init__.py  provider.py
src/vendor_connectors/ai/providers/mcp/: __init__.py  __main__.py  provider.py
src/vendor_connectors/ai/tools/: __init__.py  aws_tools.py  base.py  factory.py  github_tools.py  google_tools.py  meshy_tools.py  registry.py  slack_tools.py  vault_tools.py  zoom_tools.py
src/vendor_connectors/ai/workflows/: __init__.py  builder.py  nodes.py
src/vendor_connectors/anthropic/: __init__.py
src/vendor_connectors/aws/: __init__.py  codedeploy.py  organizations.py  s3.py
src/vendor_connectors/cursor/: __init__.py
src/vendor_connectors/github/: __init__.py
src/vendor_connectors/google/: __init__.py  billing.py  constants.py  services.py  workspace.py
src/vendor_connectors/meshy/: __init__.py  base.py  connector.py  image3d.py  mcp.py  models.py  tools.py
src/vendor_connectors/meshy/agent_tools/: __init__.py  base.py  tools.py
src/vendor_connectors/meshy/agent_tools/crewai/: provider.py
src/vendor_connectors/meshy/persistence/: __init__.py  repository.py  vector_store.py
src/vendor_connectors/meshy/webhooks/: handler.py
src/vendor_connectors/slack/: __init__.py
src/vendor_connectors/vault/: __init__.py
tests/: __init__.py  conftest.py  test_anthropic.py  test_aws_connector.py  test_aws_s3.py  test_aws_sso.py  test_connectors.py  test_cursor.py  test_github_connector.py  test_google_cloud.py  test_google_connector.py  test_google_services.py  test_google_workspace.py  test_slack_connector.py  test_vault_connector.py  test_zoom_connector.py
tests/ai/: test_base.py  test_connector.py  test_init.py  test_meshy_tools.py  test_providers_crewai.py  test_providers_mcp.py
tests/e2e/: __init__.py  conftest.py
tests/e2e/meshy/: __init__.py  conftest.py  runners.py  test_crewai.py  test_langchain.py  test_strands.py
tests/e2e/meshy/cassettes/: TestLangChainE2E.test_langchain_agent_generates_3d_model.yaml  TestLangChainE2E.test_langchain_agent_lists_animations.yaml
tests/e2e/meshy/fixtures/models/: langchain_sword_019afaf1-c440-7ee9-90f8-ed61bc505aa5.glb
tests/e2e/runners/: __init__.py  base.py  crewai_runner.py  langchain_runner.py  strands_runner.py
tests/meshy/: test_connector.py  test_models.py  test_tools.py  test_webhooks.py
tests/meshy/e2e/: __init__.py  conftest.py  test_crewai_integration.py  test_langchain_integration.py  test_strands_integration.py
tests/unit/: test_aws_connector.py
