[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vendor-connectors"
version = "202511.6.2"
description = "Universal vendor connectors with transparent secret management"
requires-python = ">=3.9"
license = { text = "MIT" }
readme = "README.md"
keywords = ["aws", "gcp", "github", "slack", "vault", "zoom", "connectors"]
authors = [{ name = "Jon Bogaty", email = "jon@jonbogaty.com" }]
maintainers = [{ name = "Jon Bogaty", email = "jon@jonbogaty.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    # jbcom ecosystem (brings gitpython, inflection, lark, orjson, hcl2, ruamel.yaml, sortedcontainers)
    "extended-data-types>=2025.11.0",
    "lifecyclelogging>=2025.11.0",
    "directed-inputs-class>=2025.11.0",
    # Cloud providers
    "boto3>=1.34.0",
    "google-api-python-client>=2.0.0",
    "google-cloud-billing>=1.0.0",
    "google-cloud-resource-manager>=1.0.0",
    "hvac>=2.0.0",
    "PyGithub>=2.0.0",
    "python-graphql-client>=0.4.0",
    "slack-sdk>=3.0.0",
    "requests>=2.32.0",
    # Additional utils not in extended-data-types
    "numpy>=1.26.0",
    "validators>=0.22.0",
    # CaseInsensitiveDict comes from requests (already a dependency)
    "deepmerge>=1.1.0",
    "filelock>=3.13.0",
    "more-itertools>=10.0.0",
]

[project.optional-dependencies]
tests = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "types-requests>=2.31.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vendor_connectors"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=vendor_connectors",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.report]
fail_under = 35  # Temporary lower threshold during secrets methods addition; increase as tests are added

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B019",  # lru_cache on methods (intentional for caching)
    "B904",  # raise from err (too many changes needed)
    "C901",  # too complex
    "UP006", # deprecated collection types (Python 3.9 compat)
    "UP007", # Optional[X] vs X | None (keep Optional for clarity)
    "UP035", # deprecated typing imports (Python 3.9 compat)
    "UP045", # use X | None instead of Optional[X] (keep Optional for 3.9)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.uv.sources]
extended-data-types = { workspace = true }
lifecyclelogging = { workspace = true }
directed-inputs-class = { workspace = true }

# Python Semantic Release configuration
[tool.semantic_release]
build_command = "pip install uv && uv build"
commit_parser = "../../scripts/psr/monorepo_parser.py:ConventionalCommitMonorepoParser"
commit_message = """
chore(connectors-release): release vendor-connectors v{version} [skip ci]

Automatically generated by python-semantic-release
"""
allow_zero_version = true
tag_format = "vendor-connectors-v{version}"
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/vendor_connectors/__init__.py:__version__"]

[tool.semantic_release.publish]
dist_glob_patterns = ["../../dist/vendor_connectors-*"]

[tool.semantic_release.remote]
upload_to_vcs_release = false

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.beta]
match = "beta"
prerelease = true
prerelease_token = "beta"

[tool.semantic_release.commit_parser_options]
path_filters = ["packages/vendor-connectors/*"]
scope_prefix = "connectors"
