[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vendor-connectors"
version = "0.2.0"
description = "Universal vendor connectors with transparent secret management, including Cursor AI agents, Anthropic Claude, and Meshy AI for 3D assets"
requires-python = ">=3.10"
license = { text = "MIT" }
readme = "README.md"
keywords = ["aws", "gcp", "github", "slack", "vault", "zoom", "meshy", "3d", "connectors"]
authors = [{ name = "Jon Bogaty", email = "jon@jonbogaty.com" }]
maintainers = [{ name = "Jon Bogaty", email = "jon@jonbogaty.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    # === Core dependencies (minimal - HTTP client foundation) ===
    # jbcom ecosystem
    "extended-data-types>=2025.11.164",
    "lifecyclelogging>=202511.3.0",
    "directed-inputs-class>=202511.3.0",
    # HTTP client with retries
    "httpx>=0.28.1",
    "tenacity>=9.1.2",
    "pydantic>=2.0.0",
    "requests>=2.32.0",
    # Utilities
    "deepmerge>=1.1.0",
    "more-itertools>=10.0.0",
]

[project.urls]
Documentation = "https://github.com/jbcom/vendor-connectors#readme"
Issues = "https://github.com/jbcom/vendor-connectors/issues"
Source = "https://github.com/jbcom/vendor-connectors"

[project.optional-dependencies]
# === Vendor Connector Extras (install what you need) ===
# AWS connector
aws = [
    "boto3>=1.34.0",
]
# Google Cloud connector
google = [
    "google-api-python-client>=2.0.0",
    "google-cloud-billing>=1.0.0",
    "google-cloud-resource-manager>=1.0.0",
]
# GitHub connector
github = [
    "PyGithub>=2.0.0",
    "python-graphql-client>=0.4.0",
]
# Slack connector
slack = [
    "slack-sdk>=3.0.0",
]
# HashiCorp Vault connector
vault = [
    "hvac>=2.0.0",
]
# Zoom connector (no extra deps - uses requests from core)
zoom = []
# Anthropic connector
anthropic = [
    "anthropic>=0.40.0",
]
# Cursor connector (no extra deps)
cursor = []
# Meshy connector (extra utils for CLI/display)
meshy = [
    "rich>=14.0.0",
    "numpy>=1.26.0",
    "validators>=0.22.0",
    "filelock>=3.13.0",
]

# === AI Framework Extras (optional tool frameworks) ===
# LangChain tools support
langchain = [
    "langchain-core>=0.3.0",
]
# CrewAI tools support
crewai = [
    "crewai[tools]>=1.5.0",
]
# AWS Strands agents support
strands = [
    "strands-agents>=0.1.0",
]
# MCP server support
mcp = [
    "mcp>=1.0.0",
]
# All AI frameworks
ai = [
    "langchain-core>=0.3.0",
    "crewai[tools]>=1.5.0",
    "strands-agents>=0.1.0",
    "mcp>=1.0.0",
]

# === Feature Extras ===
# Meshy webhooks support
webhooks = [
    "fastapi>=0.115.0",
    "uvicorn>=0.38.0",
    "pyngrok>=7.2.2",
]
# Vector store for Meshy RAG embeddings
vector = [
    "sqlite-vec>=0.1.0",
    "sentence-transformers>=3.0.0",
]

# === Testing Extras ===
# Base test dependencies (unit tests)
tests = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.4.0",
]
# E2E test base (VCR for recording)
tests-e2e = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.4.0",
    "pytest-vcr>=1.0.0",
    "vcrpy>=6.0.0",
]
# E2E tests for LangChain
tests-e2e-langchain = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.4.0",
    "pytest-vcr>=1.0.0",
    "vcrpy>=6.0.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.2.0",
]
# E2E tests for CrewAI
tests-e2e-crewai = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.4.0",
    "pytest-vcr>=1.0.0",
    "vcrpy>=6.0.0",
    "crewai[tools]>=1.5.0",
]
# E2E tests for Strands
tests-e2e-strands = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.4.0",
    "pytest-vcr>=1.0.0",
    "vcrpy>=6.0.0",
    "strands-agents>=0.1.0",
]
# All E2E tests
tests-e2e-all = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.4.0",
    "pytest-vcr>=1.0.0",
    "vcrpy>=6.0.0",
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.2.0",
    "crewai[tools]>=1.5.0",
    "strands-agents>=0.1.0",
]

# === Development ===
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "types-requests>=2.31.0",
]

# === Full Installation (all vendors + all AI frameworks) ===
all = [
    # Vendors
    "boto3>=1.34.0",
    "google-api-python-client>=2.0.0",
    "google-cloud-billing>=1.0.0",
    "google-cloud-resource-manager>=1.0.0",
    "PyGithub>=2.0.0",
    "python-graphql-client>=0.4.0",
    "slack-sdk>=3.0.0",
    "hvac>=2.0.0",
    "anthropic>=0.40.0",
    "rich>=14.0.0",
    "numpy>=1.26.0",
    "validators>=0.22.0",
    "filelock>=3.13.0",
    # AI frameworks
    "langchain-core>=0.3.0",
    "crewai[tools]>=1.5.0",
    "strands-agents>=0.1.0",
    "mcp>=1.0.0",
    # Features
    "fastapi>=0.115.0",
    "uvicorn>=0.38.0",
    "pyngrok>=7.2.2",
    "sqlite-vec>=0.1.0",
    "sentence-transformers>=3.0.0",
]

[project.scripts]
meshy-mcp = "vendor_connectors.meshy.mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vendor_connectors"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
timeout = 30
timeout_method = "thread"
addopts = [
    "--verbose",
    "--cov=vendor_connectors",
    "--cov-report=term-missing",
]
markers = [
    "e2e: End-to-end tests requiring API keys (run with --e2e flag)",
    "e2e_langchain: E2E tests for LangChain framework",
    "e2e_crewai: E2E tests for CrewAI framework",
    "e2e_strands: E2E tests for AWS Strands framework",
]

[tool.coverage.run]
omit = [
    # Test files
    "tests/*",
]

[tool.coverage.report]
# Target: 75% (tracked in issue #21)
# Current: ~47% - threshold set to pass CI while tests are being added.
# A 2% buffer is provided to avoid CI failures due to minor coverage fluctuations as tests are being added.
fail_under = 45
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "B019", "B904", "C901", "UP006", "UP007", "UP035", "UP045"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]

[tool.semantic_release]
build_command = "uv build"
commit_message = "chore(release): release v{version} [skip ci]"
allow_zero_version = true
tag_format = "v{version}"
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/vendor_connectors/__init__.py:__version__"]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.3",
    "rich>=14.2.0",
]
